# plot3

./: .gitignore  README.md  load.py  plot3.py  pyproject.toml
examples/: README.md  showcase_2d.py  showcase_3d.py  solveit_quickstart.md
plot3/: __init__.py  build.py  craft.py  encode.py  geoms.py  ggplot.py  io.py  jupyter.py  masking.py  scales.py  stats3d.py  themes.py  viewer.py
tests/: __init__.py  conftest.py  helpers.py  r_oracle_cases.R  test_3d.py  test_api_public.py  test_build_contract.py  test_geoms_ds.py  test_grammar.py  test_masking.py  test_r_oracle_parity.py  test_stats_semantic.py
tests/local/: README.md  run_all.sh  smoke_local.py
