[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plot3"
version = "0.2.0"
description = "Grammar-of-graphics plotting on three.js (2D/3D) for Jupyter and local Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "rleyvasal" }]
keywords = ["ggplot", "visualization", "three.js", "dataframe"]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
jupyter = ["ipython>=8.0"]

[project.urls]
Homepage = "https://github.com/rleyvasal/plot3"

[tool.setuptools.packages.find]
where = ["."]
include = ["plot3*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
